change test cat

--- a/resnet.example.ipynb
+++ b/resnet.example.ipynb
@@ -457,42 +457,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "1000-element Array{Float32,1}:\n",
-       " 7.434242f-6\n",
-       " 7.9623715f-6\n",
-       " 1.4927994f-7\n",
-       " 6.341796f-8\n",
-       " 6.8408036f-7\n",
-       " 9.860025f-5\n",
-       " 4.4320145f-6\n",
-       " 1.476855f-5\n",
-       " 0.0009105815\n",
-       " 3.427741f-5\n",
-       " 9.599371f-6\n",
-       " 1.4747186f-5\n",
-       " 1.6379536f-5\n",
+       " 1.6237807f-6\n",
+       " 1.7950113f-6\n",
+       " 3.0487963f-6\n",
+       " 1.8512f-6\n",
+       " 2.2960382f-6\n",
+       " 9.160164f-5\n",
+       " 8.271447f-5\n",
+       " 4.423799f-5\n",
+       " 0.0016335086\n",
+       " 4.4700588f-5\n",
+       " 4.778216f-5\n",
+       " 1.0584847f-5\n",
+       " 0.00033455592\n",
        " ⋮\n",
-       " 1.1692983f-5\n",
-       " 7.740901f-8\n",
-       " 1.8692223f-6\n",
-       " 5.7157f-7\n",
-       " 1.0856252f-6\n",
-       " 2.5791576f-6\n",
-       " 1.1585938f-6\n",
-       " 7.935305f-7\n",
-       " 1.1721868f-5\n",
-       " 7.2542894f-6\n",
-       " 1.1682383f-5\n",
-       " 1.5206274f-5"
+       " 0.00027946424\n",
+       " 7.1559484f-6\n",
+       " 7.852398f-5\n",
+       " 8.843055f-7\n",
+       " 2.2513111f-6\n",
+       " 3.4196191f-6\n",
+       " 5.8417627f-6\n",
+       " 8.232677f-6\n",
+       " 4.2582205f-6\n",
+       " 1.3455667f-5\n",
+       " 0.00015772587\n",
+       " 0.0008228442"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,23 +505,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gibbon, Hylobates lar: 51.15%\n",
-      "Pomeranian: 9.16%\n",
-      "marmoset: 7.37%\n",
-      "langur: 7.00%\n",
-      "capuchin, ringtail, Cebus capucinus: 4.09%\n",
-      "Pembroke, Pembroke Welsh corgi: 3.39%\n",
-      "ringlet, ringlet butterfly: 3.38%\n",
-      "hamster: 2.25%\n",
-      "macaque: 1.89%\n",
-      "Siamese cat, Siamese: 1.18%\n"
+      "tabby, tabby cat: 32.22%\n",
+      "Egyptian cat: 22.96%\n",
+      "tiger cat: 9.38%\n",
+      "mongoose: 4.29%\n",
+      "lynx, catamount: 1.95%\n",
+      "bath towel: 1.41%\n",
+      "prayer rug, prayer mat: 1.28%\n",
+      "teddy, teddy bear: 1.24%\n",
+      "great grey owl, great gray owl, Strix nebulosa: 1.03%\n",
+      "guinea pig, Cavia cobaya: 1.00%\n"
      ]
     }
    ],
