impl modular resnet architecture

--- a/baselines.ipynb
+++ b/baselines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,17 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Effective GPU memory usage: 83.18% (4.937 GiB/5.935 GiB)\n",
-      "CUDA allocator usage: 3.970 GiB\n",
-      "binned usage: 2.720 GiB (250.328 KiB allocated, 2.720 GiB cached)\n",
-      "Discrepancy of 1.250 GiB between memory pool and allocator!\n"
+      "Effective GPU memory usage: 35.34% (2.097 GiB/5.935 GiB)\n",
+      "CUDA allocator usage: 0 bytes\n",
+      "binned usage: 0 bytes (0 bytes allocated, 0 bytes cached)\n"
      ]
     }
    ],
@@ -334,16 +333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2916049920"
+       "0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
