--- a/resnet.example.ipynb
+++ b/resnet.example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "\"https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrLiPKBmdvZc?filename=Qat.jpg&content-type=image/jpeg\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,22 +27,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: implement resnet\n",
     "# https://nextjournal.com/mpd/image-classification-with-knet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using MAT, OffsetArrays, FFTViews, ArgParse, Images, Knet, ImageMagick"
+    "import CUDA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generate_resnet_from_weights (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using MAT, OffsetArrays, FFTViews, ArgParse, Images, Knet, ImageMagick\n",
+    "include(\"modular.resnet.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atype = CUDA.functional() ? KnetArray{Float32} : Array{Float32}\n",
+    "Knet.atype() = atype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +81,7 @@
        "get_params (generic function with 1 method)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +123,7 @@
        "data (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +160,7 @@
        "batchnorm (generic function with 1 method)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +201,7 @@
        "reslayerx0 (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +224,7 @@
        "reslayerx1 (generic function with 1 method)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +246,7 @@
        "reslayerx2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +270,7 @@
        "reslayerx3 (generic function with 1 method)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +294,7 @@
        "reslayerx4 (generic function with 1 method)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +316,7 @@
        "reslayerx5 (generic function with 1 method)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +342,7 @@
        "resnet152 (generic function with 1 method)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +381,7 @@
        "  :model => \"/home/gsoykan/Desktop/comp541/comp541_term_project/results/imagene…"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +406,7 @@
        "predict (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +425,9 @@
     "\timg = convert(o[:atype], img)\n",
     "\n",
     "\t@info \"Classifying.\"\n",
-    "\t@time y1 = resnet152(w,img,ms)\n",
+    "\t#@time y1 = resnet152(w,img,ms)\n",
+    "    modular_resnet152 = generate_resnet_from_weights(w, ms)\n",
+    "    y1 = modular_resnet152(img)\n",
     "  \n",
     "  return y1, description\n",
     "end"
@@ -403,7 +435,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(KnetArray{Float32,N} where N[K32(7,7,3,64)[2.5623413e-7⋯], K32(1,1,64,1)[0.17125425⋯], K32(1,1,64,1)[-0.9211457⋯], K32(1,1,64,256)[1.0009978e-7⋯], K32(1,1,256,1)[1.0431781⋯], K32(1,1,256,1)[-0.42354646⋯], K32(1,1,64,64)[5.7680538e-8⋯], K32(1,1,64,1)[1.3838099⋯], K32(1,1,64,1)[0.2129703⋯], K32(3,3,64,64)[-0.013626201⋯]  …  K32(1,1,512,1)[0.92608565⋯], K32(1,1,512,1)[-0.91251934⋯], K32(3,3,512,512)[-0.004375612⋯], K32(1,1,512,1)[1.0832604⋯], K32(1,1,512,1)[-0.8033409⋯], K32(1,1,512,2048)[-0.015731078⋯], K32(1,1,2048,1)[1.4361827⋯], K32(1,1,2048,1)[-1.7722093⋯], K32(1000,2048)[-0.014174754⋯], K32(1000,1)[-0.01870472⋯]], KnetArray{Float32,4}[K32(1,1,64,1)[-9.028228e-5⋯], K32(1,1,64,1)[0.005939396⋯], K32(1,1,256,1)[-0.764459⋯], K32(1,1,256,1)[0.8341639⋯], K32(1,1,64,1)[-2.0849948⋯], K32(1,1,64,1)[1.1826472⋯], K32(1,1,64,1)[-1.1165951⋯], K32(1,1,64,1)[1.0983644⋯], K32(1,1,256,1)[-0.1807499⋯], K32(1,1,256,1)[0.2596636⋯]  …  K32(1,1,512,1)[-0.39513633⋯], K32(1,1,512,1)[0.3477594⋯], K32(1,1,2048,1)[-0.018619375⋯], K32(1,1,2048,1)[0.07230469⋯], K32(1,1,512,1)[-1.0350311⋯], K32(1,1,512,1)[1.9032351⋯], K32(1,1,512,1)[-0.33744317⋯], K32(1,1,512,1)[0.31716385⋯], K32(1,1,2048,1)[-0.03702657⋯], K32(1,1,2048,1)[0.10916653⋯]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = matread(abspath(o[:model]))\n",
+    "w, ms = get_params(model[\"params\"], o[:atype])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{KnetArray{Float32,N} where N,1}:\n",
+       " K32(1,1,64,1)[0.17125425⋯]\n",
+       " K32(1,1,64,1)[-0.9211457⋯]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "println(size(w[1:3]))\n",
+    "w[2:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KnetArray{Float32,N} where N"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Knet.atype()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -411,33 +514,13 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Reading /home/gsoykan/Desktop/comp541/comp541_term_project/results/imagenet-resnet-152-dag.mat\n",
-      "└ @ Main In[40]:2\n",
+      "└ @ Main In[17]:2\n",
       "┌ Info: Reading https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrLiPKBmdvZc?filename=Qat.jpg&content-type=image/jpeg\n",
-      "└ @ Main In[40]:9\n",
+      "└ @ Main In[17]:9\n",
       "┌ Info: Downloading https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrLiPKBmdvZc?filename=Qat.jpg&content-type=image/jpeg\n",
-      "└ @ Main In[27]:4\n",
-      "--2020-11-26 01:05:42--  https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrLiPKBmdvZc?filename=Qat.jpg&content-type=image/jpeg\n",
-      "Resolving nextjournal.com (nextjournal.com)... 104.155.21.143\n",
-      "Connecting to nextjournal.com (nextjournal.com)|104.155.21.143|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 107863 (105K) [image/jpeg]\n",
-      "Saving to: ‘/tmp/jl_GjsrSM’\n",
-      "\n",
-      "     0K .......... .......... .......... .......... .......... 47%  435K 0s\n",
-      "    50K .......... .......... .......... .......... .......... 94%  920K 0s\n",
-      "   100K .....                                                 100% 1,55M=0,2s\n",
-      "\n",
-      "2020-11-26 01:05:46 (610 KB/s) - ‘/tmp/jl_GjsrSM’ saved [107863/107863]\n",
-      "\n",
+      "└ @ Main In[7]:4\n",
       "┌ Info: Classifying.\n",
-      "└ @ Main In[40]:13\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.052981 seconds (31.10 k allocations: 1.343 MiB)\n"
+      "└ @ Main In[17]:13\n"
      ]
     },
     {
@@ -446,7 +529,7 @@
        "(K32(1000,1)[-1.847644⋯], Any[\"tench, Tinca tinca\" \"goldfish, Carassius auratus\" … \"ear, spike, capitulum\" \"toilet tissue, toilet paper, bathroom tissue\"])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +575,7 @@
        " 0.0008228442"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
