--- a/resnet.example.ipynb
+++ b/resnet.example.ipynb
@@ -2,17 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/userfiles/gsoykan20/resnet_pretrained/imagenet-resnet-50-dag.mat\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_file_path = \"/home/gsoykan/Desktop/comp541/comp541_term_project/results/imagenet-resnet-152-dag.mat\"\n",
-    "cat_img_url = \"https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrLiPKBmdvZc?filename=Qat.jpg&content-type=image/jpeg\""
+    "cat_img_url = \"https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrLiPKBmdvZc?filename=Qat.jpg&content-type=image/jpeg\"\n",
+    "resnet50_model_file_path = \"/userfiles/gsoykan20/resnet_pretrained/imagenet-resnet-50-dag.mat\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,17 +42,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generate_headless_resnet50_from_weights (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "using MAT, OffsetArrays, FFTViews, ArgParse, Images, Knet, ImageMagick\n",
+    "using MAT, OffsetArrays, FFTViews, ArgParse, Images, Knet, ImageMagick, Printf\n",
     "include(\"modular.resnet.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "get_params (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function get_params(params, atype)\n",
     "    len = length(params[\"value\"])\n",
@@ -81,9 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "data (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# From vgg.jl\n",
     "function data(img, averageImage)\n",
@@ -188,13 +233,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "should_use_resnet_50 = true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Symbol,Any} with 4 entries:\n",
+       "  :atype => KnetArray{Float32,N} where N\n",
+       "  :top   => 10\n",
+       "  :image => \"https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrL…\n",
+       "  :model => \"/userfiles/gsoykan20/resnet_pretrained/imagenet-resnet-50-dag.mat\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "o = Dict(\n",
     "  :atype => KnetArray{Float32},\n",
-    "  :model => model_file_path,\n",
+    "  :model => should_use_resnet_50 ? resnet50_model_file_path : model_file_path,\n",
     "  :image => cat_img_url,\n",
     "  :top   => 10\n",
     ")"
@@ -202,9 +282,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Reading /userfiles/gsoykan20/resnet_pretrained/imagenet-resnet-50-dag.mat\n",
+      "└ @ Main In[18]:1\n",
+      "┌ Info: Reading https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrLiPKBmdvZc?filename=Qat.jpg&content-type=image/jpeg\n",
+      "└ @ Main In[18]:8\n",
+      "┌ Info: Downloading https://nextjournal.com/data/QmXNbi2LE7u6yBdBXaQ9E2zGb48FELg3TxjrLiPKBmdvZc?filename=Qat.jpg&content-type=image/jpeg\n",
+      "└ @ Main In[7]:4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "224×224×3×1 KnetArray{Float32,4}:\n",
+       "[:, :, 1, 1] =\n",
+       "  46.8979   56.7673   69.7239   77.6917  …  -114.766  -113.745  -114.683\n",
+       "  53.7525   57.6155   63.5605   65.5267     -113.895  -113.854  -113.768\n",
+       "  54.6633   60.5154   57.4254   51.3756     -113.994  -113.939  -113.83\n",
+       "  60.576    63.423    59.3401   50.2966     -115.023  -114.958  -115.875\n",
+       "  56.4996   61.3414   60.247    52.209      -114.042  -114.972  -114.884\n",
+       "  61.4451   58.2961   50.204    52.1449  …  -114.049  -114.988  -114.895\n",
+       "  65.3563   58.2075   51.1202   52.0617     -114.077  -114.019  -114.933\n",
+       "  58.29     49.1568   46.09     59.0241     -115.074  -113.008  -114.936\n",
+       "  44.1948   48.0591   55.9738   68.932      -112.106  -112.04   -113.971\n",
+       "  43.1893   52.0384   53.9627   67.9176     -110.121  -111.064  -113.995\n",
+       "  43.132    54.9807   55.9002   54.8451  …  -110.166  -112.118  -114.044\n",
+       "  48.0547   59.9174   63.837    52.7837     -113.181  -113.128  -114.074\n",
+       "  48.9915   53.8664   58.7945   49.7318     -113.204  -114.15   -115.09\n",
+       "   ⋮                                     ⋱                      \n",
+       "  95.0442   93.9003   99.8476  101.773       122.834   113.845   122.944\n",
+       " 101.117    92.9856   90.9233  100.854       122.852   120.878   121.969\n",
+       " 104.185    88.0643   85.996    96.9255      123.844   119.892   122.992\n",
+       "  99.2517   88.1284   94.06     97.9919  …   125.861   121.898   123.997\n",
+       "  96.336   102.209   106.13    101.079       121.922   120.955   118.037\n",
+       "  90.3913   94.2614   96.1777  102.124       120.952   120.002   118.072\n",
+       "  92.4439   89.3112   81.2287  102.174       125.991   126.037   121.107\n",
+       "  88.4952   89.3591   91.284    97.2391      125.011   128.071   121.177\n",
+       "  97.5718  103.438   105.361   104.309   …   125.054   129.117   124.223\n",
+       "  98.6715  103.53    105.449   107.393       127.129   130.188   129.274\n",
+       " 102.766   109.635   105.565   108.502       125.184   130.238   126.33\n",
+       " 100.909   101.799   105.752    99.6848      126.314   126.354   127.439\n",
+       "\n",
+       "[:, :, 2, 1] =\n",
+       " 36.1138   45.0159   59.9948   66.9913  …  -102.7    -103.698  -105.657\n",
+       " 40.9709   47.8621   54.8281   55.8218     -104.819  -104.798  -104.727\n",
+       " 41.8918   49.7718   47.705    38.685      -104.881  -104.852  -103.767\n",
+       " 47.8087   53.6834   49.6249   36.61       -105.895  -104.86   -104.8\n",
+       " 43.7664   51.6315   47.5638   38.5526     -104.879  -104.831  -103.76\n",
+       " 49.7208   46.5966   37.5286   38.5022  …  -104.862  -104.83   -103.753\n",
+       " 52.6591   43.5376   36.4763   40.4482     -106.85   -104.814  -103.75\n",
+       " 42.5942   34.4905   31.4554   46.4202     -105.831  -103.782  -103.735\n",
+       " 29.5291   35.4287   42.3698   58.3615     -102.822  -102.776  -102.735\n",
+       " 27.5373   38.4239   44.3743   58.3609     -102.823  -101.784  -102.742\n",
+       " 27.5242   42.4047   48.3539   45.3332  …  -100.813  -100.784  -102.737\n",
+       " 31.4541   47.353    54.2976   40.2783     -101.81   -101.78   -102.75\n",
+       " 33.4259   44.3275   48.2897   34.2616     -100.792  -101.76   -102.717\n",
+       "  ⋮                                     ⋱                      \n",
+       " 90.4572   87.3429   92.3156   94.2725      115.205   108.206   119.284\n",
+       " 96.4944   85.3922   82.353    96.3176      117.187   115.193   114.265\n",
+       " 99.5384   80.4505   77.4044   91.3679      118.151   113.18    115.26\n",
+       " 95.5705   81.4779   87.4389   93.4017  …   120.13    116.145   115.228\n",
+       " 95.6481   94.5521  100.498    96.4823      117.164   116.183   112.249\n",
+       " 87.6757   86.5776   88.522    97.4993      117.166   115.201   112.253\n",
+       " 89.724    79.6182   70.5632   94.542       121.187   123.218   116.273\n",
+       " 83.7508   78.6497   78.594    88.5819      121.175   125.221   117.302\n",
+       " 92.8257   99.7196  101.667   101.644   …   119.199   125.253   121.335\n",
+       " 94.8879  100.782   103.733   103.698       120.239   126.282   126.351\n",
+       " 98.9823  106.891   102.841   104.817       117.288   125.324   122.394\n",
+       " 97.1096  100.026   103.004    95.9677      116.382   119.411   118.476\n",
+       "\n",
+       "[:, :, 3, 1] =\n",
+       "  32.5789   49.5298   69.5555   81.5924  …  -79.7011  -79.7255  -81.7206\n",
+       "  43.4714   51.4132   62.4251   60.4655     -80.7781  -79.7813  -79.7561\n",
+       "  46.3998   61.3365   56.3147   40.3382     -80.8284  -79.8274  -78.7738\n",
+       "  54.3513   60.2772   51.262    41.2953     -80.8139  -79.8003  -79.7744\n",
+       "  50.3174   59.2432   56.2169   43.2533     -80.7781  -79.7544  -78.7257\n",
+       "  64.3057   50.2369   39.2187   42.237   …  -80.7287  -79.7181  -78.6794\n",
+       "  68.2683   52.2008   36.1864   41.2063     -81.6979  -79.6864  -78.6595\n",
+       "  45.2414   37.1859   32.1946   48.2024     -81.6516  -79.6338  -76.6146\n",
+       "  26.1831   34.1341   49.1209   70.1581     -78.6329  -77.6192  -76.6076\n",
+       "  28.2238   43.1584   53.1477   66.1849     -77.6063  -77.5931  -77.5879\n",
+       "  29.2094   49.1372   54.1324   49.1575  …  -75.5985  -76.5961  -77.5842\n",
+       "  40.1685   62.1125   67.104    48.1279     -74.5717  -74.5663  -75.5684\n",
+       "  30.1422   49.1023   55.1044   35.1173     -71.5435  -72.5425  -73.5398\n",
+       "   ⋮                                     ⋱                      \n",
+       " 104.134   101.078   104.097   105.094      122.413   115.384   126.432\n",
+       " 108.175    96.1267   96.1346  108.14       126.395   123.38    121.417\n",
+       " 111.193    93.1525   92.152   106.162      129.341   123.344   123.391\n",
+       " 109.221    94.1771  103.184   110.19    …  129.316   126.304   125.355\n",
+       " 108.261   109.217   113.208   110.232      126.319   125.312   122.34\n",
+       " 100.284   100.236   102.228   107.249      125.317   125.323   123.342\n",
+       " 103.287    93.2328   85.2239  109.242      132.28    133.286   127.3\n",
+       "  95.3117   90.2544   95.2482  107.275      132.256   136.27    128.321\n",
+       " 107.344   113.297   116.286   117.301   …  128.232   135.255   132.303\n",
+       " 110.415   115.355   117.345   119.354      127.268   135.286   137.314\n",
+       " 114.475   121.426   116.424   120.43       124.277   133.283   132.32\n",
+       " 112.579   114.555   116.571   110.58       123.358   126.358   128.392"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\t@info \"Reading $(o[:model])\"\n",
     "\tmodel = matread(abspath(o[:model]))\n",
@@ -220,9 +406,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "predict (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function predict(o)\n",
     "\t@info \"Reading $(o[:model])\"\n",
@@ -247,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,9 +454,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KnetArray{Float32,N} where N"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Knet.atype()"
    ]
@@ -361,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,9 +578,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "modular_resnet50 = generate_resnet50_from_weights(w, ms);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000×1 KnetArray{Float32,2}:\n",
+       " -1.6192628\n",
+       " -0.8169954\n",
+       " -2.4409273\n",
+       " -1.2279731\n",
+       " -0.70447093\n",
+       "  2.9071352\n",
+       " -0.73075306\n",
+       "  0.04789675\n",
+       "  1.6922679\n",
+       "  0.21194743\n",
+       "  2.9529843\n",
+       " -1.150496\n",
+       "  2.4574034\n",
+       "  ⋮\n",
+       "  3.205746\n",
+       "  0.14342475\n",
+       "  0.65395784\n",
+       " -3.537719\n",
+       " -1.9304038\n",
+       " -3.1007714\n",
+       " -2.3218238\n",
+       "  3.0401242\n",
+       "  0.3528585\n",
+       "  0.8197256\n",
+       "  2.8955746\n",
+       "  3.58648"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_50 = modular_resnet50(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "ArgumentError: array must be non-empty",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: array must be non-empty",
+      "",
+      "Stacktrace:",
+      " [1] popfirst! at ./array.jl:1255 [inlined]",
+      " [2] BatchNormLayer(::Array{KnetArray{Float32,N} where N,1}, ::Array{KnetArray{Float32,4},1}) at /scratch/users/gsoykan20/comp541_term_project/models.jl:69",
+      " [3] ResLayerX0(::Array{KnetArray{Float32,N} where N,1}, ::Array{KnetArray{Float32,4},1}; padding::Int64, stride::Int64) at /scratch/users/gsoykan20/comp541_term_project/models.jl:124",
+      " [4] #ResLayerX1#152 at /scratch/users/gsoykan20/comp541_term_project/models.jl:141 [inlined]",
+      " [5] generate_resnet_from_weights(::Array{KnetArray{Float32,N} where N,1}, ::Array{KnetArray{Float32,4},1}) at /scratch/users/gsoykan20/comp541_term_project/modular.resnet.jl:6",
+      " [6] top-level scope at In[43]:1",
+      " [7] include_string(::Function, ::Module, ::String, ::String) at ./loading.jl:1091"
+     ]
+    }
+   ],
    "source": [
     "modular_resnet152 = generate_resnet_from_weights(w, ms)\n",
     "y1 = modular_resnet152(img)"
@@ -380,26 +661,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "y_to_readable_output (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "z1 = vec(Array(y1))\n",
-    "s1 = sortperm(z1,rev=true)\n",
-    "p1 = exp.(logp(z1))"
+    "function y_to_readable_output(raw_y)\n",
+    "z = vec(Array(raw_y))\n",
+    "s = sortperm(z,rev=true)\n",
+    "p = exp.(logp(z))\n",
+    "\n",
+    "for ind in s[1:o[:top]]\n",
+    "  print(\"$(description[ind]): $(@sprintf(\"%.2f\",p[ind]*100))%\\n\")\n",
+    "end\n",
+    "    \n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Egyptian cat: 24.50%\n",
+      "tabby, tabby cat: 23.52%\n",
+      "great grey owl, great gray owl, Strix nebulosa: 12.68%\n",
+      "ram, tup: 3.22%\n",
+      "wild boar, boar, Sus scrofa: 2.47%\n",
+      "tiger cat: 2.28%\n",
+      "hare: 2.05%\n",
+      "chest: 1.87%\n",
+      "bonnet, poke bonnet: 1.17%\n",
+      "ringlet, ringlet butterfly: 1.09%\n"
+     ]
+    }
+   ],
    "source": [
-    "using Printf\n",
-    "\n",
-    "for ind in s1[1:o[:top]]\n",
-    "  print(\"$(description[ind]): $(@sprintf(\"%.2f\",p1[ind]*100))%\\n\")\n",
-    "end"
+    "y_to_readable_output(y_50)"
    ]
   },
   {
