--- a/deeper-cut/mpii.official.accuracy.ipynb
+++ b/deeper-cut/mpii.official.accuracy.ipynb
@@ -255,6 +255,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×28883 Array{Any,2}:\n",
+       " Dict{String,Any}(\"name\"=>\"/userfiles/gsoykan20/mpii_human_pose/cropped/im00005_1.png\")  …  Dict{String,Any}(\"name\"=>\"/userfiles/gsoykan20/mpii_human_pose/cropped/im24985_4.png\")"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_people[\"annolist\"][\"image\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 147,
    "metadata": {},
    "outputs": [
