impl loc_ref and improve accuracy metrics

--- a/deeper-cut/mpii.official.accuracy.ipynb
+++ b/deeper-cut/mpii.official.accuracy.ipynb
@@ -2,43 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "using MAT\n",
     "using Images, FileIO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/userfiles/gsoykan20/mpii_human_pose/cropped/dataset.mat\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path_to_processed_mat = \"/userfiles/gsoykan20/mpii_human_pose/cropped/dataset.mat\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = matopen(path_to_processed_mat)\n",
-    "dataset = read(file, \"dataset\")\n",
-    "close(file);"
    ]
   },
   {
@@ -49,10 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "Dict{String,Any} with 3 entries:\n",
-       "  \"image\"  => Any[\"/userfiles/gsoykan20/mpii_human_pose/cropped/im00005_1.png\" …\n",
-       "  \"size\"   => Any[[3.0 391.0 295.0] [3.0 446.0 368.0] … [3.0 503.0 371.0] [3.0 …\n",
-       "  \"joints\" => Any[Any[Int32[0 175 261; 1 173 178; … ; 12 187 126; 13 226 72]] A…"
+       "\"/userfiles/gsoykan20/mpii_human_pose/cropped/dataset.mat\""
       ]
      },
      "execution_count": 5,
@@ -61,12 +27,23 @@
     }
    ],
    "source": [
-    "dataset"
+    "path_to_processed_mat = \"/userfiles/gsoykan20/mpii_human_pose/cropped/dataset.mat\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = matopen(path_to_processed_mat)\n",
+    "dataset = read(file, \"dataset\")\n",
+    "close(file);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -75,20 +52,24 @@
        "\"/userfiles/gsoykan20/mpii_human_pose/cropped/annolist-multPerson-h400.mat\""
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_to_single_person_mat = \"/userfiles/gsoykan20/mpii_human_pose/cropped/annolist-singlePerson-h400.mat\"\n",
+    "path_to_single_person_mat = (\n",
+    "    \"/userfiles/gsoykan20/mpii_human_pose/cropped/annolist-singlePerson-h400.mat\"\n",
+    ")\n",
     "path_to_full_mat = \"/userfiles/gsoykan20/mpii_human_pose/cropped/annolist-full-h400.mat\"\n",
-    "path_to_multi_person_mat = \"/userfiles/gsoykan20/mpii_human_pose/cropped/annolist-multPerson-h400.mat\""
+    "path_to_multi_person_mat = (\n",
+    "    \"/userfiles/gsoykan20/mpii_human_pose/cropped/annolist-multPerson-h400.mat\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +118,27 @@
    ],
    "source": [
     "image_path_from_dataset = dataset[\"image\"][1, 20000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×28883 Array{Any,2}:\n",
+       " Dict{String,Any}(\"name\"=>\"/userfiles/gsoykan20/mpii_human_pose/cropped/im00005_1.png\")  …  Dict{String,Any}(\"name\"=>\"/userfiles/gsoykan20/mpii_human_pose/cropped/im24985_4.png\")"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_people[\"annolist\"][\"image\"]"
    ]
   },
   {
@@ -225,7 +227,7 @@
     }
    ],
    "source": [
-    "# TODO: continue from here\n",
+    "#  TODO: continue from here\n",
     "single_person[\"annolist\"][\"image\"]"
    ]
   },
