--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -54,28 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling Knet [1902f260-5fb4-5aff-8c31-6271790ab950]\n",
-      "└ @ Base loading.jl:1278\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Knet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "include(\"deeper-cut/mpii.annotation.reader.jl\")\n",
+    "include(\"modular.resnet.jl\")\n",
     "include(\"models.jl\")"
    ]
   },
@@ -119,10 +112,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Deconv(P(KnetArray{Float32,4}(4,4,14,2048)), 2, 1, \"part_detect_deconv\")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_deconv = Deconv(\n",
+    "            4,\n",
+    "            4,\n",
+    "            14,\n",
+    "            2048;\n",
+    "            padding = 1,\n",
+    "            stride = 2,\n",
+    "            tag = \"part_detect_deconv\",\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modular_resnet = get_modular_resnet(true);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_vis = KnetArray(randn(Float32, 128, 128, 3, 10));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intermediate_r = modular_resnet(test_vis);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 8, 2048, 10)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intermediate_r |> size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16, 16, 14, 10)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_deconv(intermediate_r) |> size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "o′ =s(i′ −1)+k−2p.\n",
+    "16 = 2( 8 - 1) + 4 - 2"
+   ]
   }
  ],
  "metadata": {
