--- a/deeper-cut/deepercut-152-training.ipynb
+++ b/deeper-cut/deepercut-152-training.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,6 +129,25 @@
      "text": [
       "┣█████████████████▍  ┫ [86.88%, 22240/25600, 01:38:25/01:53:18, 3.76i/s] Excessive output truncated after 524301 bytes."
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9×42 Array{Real,2}:\n",
+       " 0        0         0         0         …  0        0         0\n",
+       " 0        0         0         0            0        0         0\n",
+       " 0        0         0         0            0        0         0\n",
+       " 0        0         0         0            0        0         0\n",
+       " 0        0         0         0            0        0         0\n",
+       " 0        0         0         0         …  0        0         0\n",
+       " 0        0         0         0            0        0         0\n",
+       " 0        0         0         0            0        0         0\n",
+       " 0.14895  0.211132  0.288202  0.329301     0.56264  0.536478  0.551845"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
